commit of heterogenous vot from aws